添加了网络摄像头查看和自动记录工单修改功能。完善了部分页面。

--- a/Web/app1/templates/chat2.html
+++ b/Web/app1/templates/chat2.html
@@ -10,6 +10,9 @@
   >
     <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
+    <a style="text-decoration: none" href="/member2"><cite>用户列表</cite></a>
+    <span lay-separator="">/</span>
+    <a style="text-decoration: none" ><cite>收信箱</cite></a>
   </div>
 </div>
 
