--- a/Web/app1/templates/workorder_record.html
+++ b/Web/app1/templates/workorder_record.html
@@ -12,6 +12,8 @@
 
     <a style="text-decoration: none" href="/index">首页</a
     ><span lay-separator="">/</span>
+    <a style="text-decoration: none" href="/workorder/list">工单列表</a
+      ><span lay-separator="">/</span>
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
