--- a/Web/app1/templates/chat.html
+++ b/Web/app1/templates/chat.html
@@ -10,6 +10,9 @@
   >
     <a style="text-decoration: none" href="/index">首页</a
     ><span lay-separator="">/</span>
+    <a style="text-decoration: none" href="/member"><cite>用户列表</cite></a>
+    <span lay-separator="">/</span>
+    <a style="text-decoration: none" ><cite>收信箱</cite></a>
   </div>
 </div>
 
