--- a/Web/app1/templates/member_list.html
+++ b/Web/app1/templates/member_list.html
@@ -15,7 +15,7 @@
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none" href="/member"><cite>用户列表</cite></a>
+    <a style="text-decoration: none" ><cite>用户列表</cite></a>
     <div style="float:right">
       <form method="get">
         <div class="layui-input-inline">
