--- a/Web/app1/templates/workorder_add2.html
+++ b/Web/app1/templates/workorder_add2.html
@@ -11,7 +11,7 @@
 
     <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
-    <a style="text-decoration: none" href="/users2">新建工单</a
+    <a style="text-decoration: none" href="/workorder2/list">工单列表</a
     ><span lay-separator="">/</span>
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
