--- a/Web/app1/templates/workorder_handle2.html
+++ b/Web/app1/templates/workorder_handle2.html
@@ -10,6 +10,9 @@
   >
     <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
+    <a style="text-decoration: none" href="/workorder2/list">工单列表</a
+      ><span lay-separator="">/</span>
+    <a style="text-decoration: none" >处理工单</a>
   </div>
 </div>
 
