--- a/Web/app1/templates/index2.html
+++ b/Web/app1/templates/index2.html
@@ -28,35 +28,50 @@
       </div>
     </div>
     <div class="layui-col-md3" style="margin: 5px">
-      <div class="layui-card" style="margin: 10px">
-        <div class="layui-card-header" style="font-size: 15px">快速使用</div>
-        <ul class="layui-timeline" style="margin: 10px">
-          <li class="layui-timeline-item">
-            <i class="layui-icon layui-timeline-axis" >&#xe63f;</i>
-            <div class="layui-timeline-content layui-text">
-              <a class="layui-timeline-title" style="font-size: 17px" href="/member2">派发指令</a>
+      <div class="layui-row grid-demo grid-demo-bg1">
+        <div class="layui-col-md12"><div class="layui-card" style="margin: 10px">
+          <div class="layui-card-header" style="font-size: 15px">快速使用</div>
+          <ul class="layui-timeline" style="margin: 10px">
+            <li class="layui-timeline-item">
+              <i class="layui-icon layui-timeline-axis" >&#xe63f;</i>
+              <div class="layui-timeline-content layui-text">
+                <a class="layui-timeline-title" style="font-size: 17px" href="/member2">派发指令</a>
+              </div>
+            </li>
+            <li class="layui-timeline-item">
+              <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+              <div class="layui-timeline-content layui-text">
+                <a class="layui-timeline-title" style="font-size: 17px" href="/chat_list2">收信箱</a>
+              </div>
+            </li>
+            <li class="layui-timeline-item">
+              <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+              <div class="layui-timeline-content layui-text">
+                <a class="layui-timeline-title" style="font-size: 17px" href="/workorder2/list">工单列表</a>
+              </div>
+            </li>
+            <li class="layui-timeline-item">
+              <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+              <div class="layui-timeline-content layui-text">
+                <a class="layui-timeline-title" style="font-size: 17px" href="/meeting">视频会议</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="layui-col-md12">
+          <div class="layui-card" style="margin: 10px">
+            <div class="layui-card-header" style="font-size: 15px">摄像头信息</div>
+            <div class="layui-card-body">
+              <div style="margin:5px">摄像头名称:<span id="c_id"></span></div>
+              <div style="margin:5px">摄像头经度:<span id="c_longitude"></span></div>
+              <div style="margin:5px">摄像头维度:<span id="c_latitude"></span></div>
             </div>
-          </li>
-          <li class="layui-timeline-item">
-            <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-            <div class="layui-timeline-content layui-text">
-              <a class="layui-timeline-title" style="font-size: 17px" href="/chat_list2">收信箱</a>
-            </div>
-          </li>
-          <li class="layui-timeline-item">
-            <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-            <div class="layui-timeline-content layui-text">
-              <a class="layui-timeline-title" style="font-size: 17px" href="/workorder2/list">工单列表</a>
-            </div>
-          </li>
-          <li class="layui-timeline-item">
-            <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-            <div class="layui-timeline-content layui-text">
-              <a class="layui-timeline-title" style="font-size: 17px" href="/meeting">视频会议</a>
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
+        
+      </div>
+      
         
     </div>
     {% comment %}
