--- a/Web/app1/templates/layout2.html
+++ b/Web/app1/templates/layout2.html
@@ -21,7 +21,7 @@
     <style>
         #allmap{
           width:100%%;
-          height:500px;
+          height:800px;
           margin:0;
           overflow:hidden;
 
@@ -160,6 +160,9 @@
         class="layui-nav layui-layout-right"
         lay-filter="layadmin-layout-right"
       >
+        <li class="layui-nav-item layui-hide-xs">
+          <a href="https://101.42.227.233">返回门户界面</a>
+        </li>
         <li class="layui-nav-item" lay-unselect="">
           <a href="javascript:;">
             <cite><i class="layui-icon layui-icon-username"></i> 用户</cite>
