--- a/Web/app1/templates/layout2.html
+++ b/Web/app1/templates/layout2.html
@@ -161,7 +161,7 @@
         lay-filter="layadmin-layout-right"
       >
         <li class="layui-nav-item layui-hide-xs">
-          <a href="https://101.42.227.233">返回门户界面</a>
+          <a href="http://101.42.227.233">返回门户界面</a>
         </li>
         <li class="layui-nav-item" lay-unselect="">
           <a href="javascript:;">
