--- a/Web/app1/templates/workorder_add.html
+++ b/Web/app1/templates/workorder_add.html
@@ -25,7 +25,7 @@
         <div class="layui-card" style="margin: 20px">
           <div class="layui-card-header">新建工单</div>
           <div class="layui-card-body">
-            <form class="layui-form" method="post">
+            <form class="layui-form" method="post" enctype="multipart/form-data">
               {% csrf_token %} {% for field in form %}
               <div class="layui-form-item">
                 <label class="layui-form-label"
@@ -40,6 +40,8 @@
               </div>
               {% endfor %}
 
+              {{ fileform.as_p }}
+            
               <div class="layui-form-item">
                 <div class="layui-input-block">
                   <button
