--- a/Web/app1/templates/workorder_edit2.html
+++ b/Web/app1/templates/workorder_edit2.html
@@ -25,7 +25,7 @@
         <div class="layui-card" style="margin: 20px">
           <div class="layui-card-header">编辑工单</div>
           <div class="layui-card-body">
-            <form class="layui-form" method="post">
+            <form class="layui-form" method="post" enctype="multipart/form-data">
 
 
               {% csrf_token %} {% for field in form %}
@@ -41,7 +41,7 @@
                 <span style="color: red">{{ field.errors.0 }}</span>
               </div>
               {% endfor %}
-
+              {{ fileform.as_p }}
               <div class="layui-form-item">
                 <div class="layui-input-block">
                   <button
