添加了下载文件的功能

--- a/Web/app1/templates/workorder_list2.html
+++ b/Web/app1/templates/workorder_list2.html
@@ -80,6 +80,11 @@
                   class="layui-btn layui-btn-sm layui-btn-danger"
                   >处理</a
                 >
+                <a
+                  href="/workorder2/{{i.number}}/filelist"
+                  class="layui-btn layui-btn-sm layui-btn-danger"
+                  >文件查看</a
+                >
               </td>
             </tr>
             {% endfor %}
