添加了富文本框功能，修改了文件上传页面

--- a/Web/app1/templates/file_list.html
+++ b/Web/app1/templates/file_list.html
@@ -61,6 +61,21 @@
         </table>
       </div>
     </div>
+    <div>
+      <form class="layui-form" method="post" enctype="multipart/form-data">
+        {% csrf_token %} {% for field in fileform %}
+        <div class="layui-form-item">
+          <div class="layui-input-block">上传新文件：{{ field }}
+            <input
+          type="submit"
+          value="上传"
+        >
+          </div>
+        </div>
+        {% endfor %}
+
+      </form>
+    </div>
   </div>
 </div>
 
