--- a/Web/app1/templates/workorder_list.html
+++ b/Web/app1/templates/workorder_list.html
@@ -41,6 +41,15 @@
       </div>
       <div class="layui-card-body" style="padding: 0">
         <table class="layui-table" style="margin: 0">
+          <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col width="450">
+            <col>
+          </colgroup>
           <thead>
             <tr style="background-color: #00968817">
               <th>ID</th>
