--- a/Web/app1/templates/layout.html
+++ b/Web/app1/templates/layout.html
@@ -210,6 +210,7 @@
               <dl class="layui-nav-child">
                 <dd><a href="/workorder/add">新建工单</a></dd>
                 <dd><a href="/workorder/list">工单列表</a></dd>
+                <dd><a href="/workorder/mylist">我的工单</a></dd>
               </dl>
             </li>
           </ul>
