--- a/Web/app1/templates/workorder_edit.html
+++ b/Web/app1/templates/workorder_edit.html
@@ -21,7 +21,7 @@
 
   <div class="right-t-body">
     <div class="layui-row">
-      <div class="layui-col-col-md-8">
+      <div class="layui-col-md10">
         <div class="layui-card" style="margin: 20px">
           <div class="layui-card-header">编辑工单</div>
           <div class="layui-card-body">
