--- a/Web/app1/templates/workorder_list2.html
+++ b/Web/app1/templates/workorder_list2.html
@@ -15,13 +15,24 @@
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none" href="/workorder2/list"><cite>工单列表</cite></a>
-    <div style="float:right">
+    <a style="text-decoration: none" href="/workorder2/list"
+      ><cite>工单列表</cite></a
+    >
+    <div style="float: right">
       <form method="get">
         <div class="layui-input-inline">
-          <input type="text" name="q" lay-verify="required" placeholder="搜索" autocomplete="off" class="layui-input">
+          <input
+            type="text"
+            name="q"
+            lay-verify="required"
+            placeholder="搜索"
+            autocomplete="off"
+            class="layui-input"
+          />
         </div>
-        <button type="submit" class="layui-btn layui-btn-sm"><i class="layui-icon"></i></button>
+        <button type="submit" class="layui-btn layui-btn-sm">
+          <i class="layui-icon"></i>
+        </button>
       </form>
     </div>
   </div>
@@ -42,13 +53,13 @@
       <div class="layui-card-body" style="padding: 0">
         <table class="layui-table" style="margin: 0">
           <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col width="450">
-            <col>
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col width="350" />
+            <col />
           </colgroup>
           <thead>
             <tr style="background-color: #00968817">
