--- a/Web/app1/templates/layout.html
+++ b/Web/app1/templates/layout.html
@@ -145,11 +145,12 @@
         </li>
 
         <li class="layui-nav-item layui-hide-xs">
-          <a href="/index">贲集村</a>
-        </li>
-        <li class="layui-nav-item layui-hide-xs">
           <a href="/index2">蒋庄村</a>
         </li>
+        <li class="layui-nav-item layui-hide-xs">
+          <a href="/index">贲集村</a>
+        </li>
+        
 
         <span
           class="layui-nav-bar"
@@ -199,18 +200,38 @@
               </dl>
             </li>
             <li class="layui-nav-item">
-              <a href="javascript:;">其他功能</a>
-              <dl class="layui-nav-child">
-                <dd><a href="/meeting">视频</a></dd>
-                <dd><a href="/users">人员管理</a></dd>
-              </dl>
-            </li>
-            <li class="layui-nav-item">
               <a href="javascript:;">工单列表</a>
               <dl class="layui-nav-child">
                 <dd><a href="/workorder/add">新建工单</a></dd>
                 <dd><a href="/workorder/list">工单列表</a></dd>
                 <dd><a href="/workorder/mylist">我的工单</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;">党建引领</a>
+              <dl class="layui-nav-child">
+                <dd><a href="/">子菜单1</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;">网格调研</a>
+              <dl class="layui-nav-child">
+                <dd><a href="/">调查问卷</a></dd>
+                <dd><a href="/">我的问卷</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;">手环管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="/">用户列表</a></dd>
+                <dd><a href="/">信息调查</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;">网格员管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="/meeting">视频</a></dd>
+                <dd><a href="/users">人员管理</a></dd>
               </dl>
             </li>
           </ul>
