--- a/Web/app1/templates/layout2.html
+++ b/Web/app1/templates/layout2.html
@@ -161,7 +161,7 @@
         lay-filter="layadmin-layout-right"
       >
         <li class="layui-nav-item layui-hide-xs">
-          <a href="http://101.42.227.233">返回门户界面</a>
+          <a href="http://127.0.0.1:8005">返回门户界面</a>
         </li>
         <li class="layui-nav-item" lay-unselect="">
           <a href="javascript:;">
@@ -209,21 +209,21 @@
             <li class="layui-nav-item">
               <a href="javascript:;">党建引领</a>
               <dl class="layui-nav-child">
-                <dd><a href="/">子菜单1</a></dd>
+                <dd><a href="https://www.12371.cn/">共产党员网</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
               <a href="javascript:;">网格调研</a>
               <dl class="layui-nav-child">
-                <dd><a href="/">调查问卷</a></dd>
-                <dd><a href="/">我的问卷</a></dd>
+                <dd><a href="">调查问卷</a></dd>
+                <dd><a href="">我的问卷</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
               <a href="javascript:;">手环管理</a>
               <dl class="layui-nav-child">
-                <dd><a href="/">用户列表</a></dd>
-                <dd><a href="/">信息调查</a></dd>
+                <dd><a href="">用户列表</a></dd>
+                <dd><a href="">信息调查</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
